# parallel-learning

./: CMakeLists.txt  README.md
MPI/: CMakeLists.txt
MPI/laboratory_work_5/: CMakeLists.txt  main.cpp
MPI/laboratory_work_6/: CMakeLists.txt  main.cpp
OpenMP/: CMakeLists.txt
OpenMP/laboratory_work_1/: CMakeLists.txt  main.cpp
OpenMP/laboratory_work_2/: CMakeLists.txt  main.cpp
OpenMP/laboratory_work_3/: CMakeLists.txt  main.cpp
OpenMP/laboratory_work_4/: CMakeLists.txt
laboratory_work_1/: CMakeLists.txt  main.cpp
laboratory_work_2/: CMakeLists.txt  main.cpp
laboratory_work_3/: CMakeLists.txt  main.cpp
laboratory_work_4/: CMakeLists.txt  main.cpp
laboratory_work_5/: CMakeLists.txt  main.cpp
laboratory_work_6/: CMakeLists.txt  main.cpp
